--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -6,5 +6,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome, Fazal Ur Rehaman - 500239862</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p>This is after pushing changes to Github.</p>
 </div>
